[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/kenney-future-narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/trackgui.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 1, 1, 1, 0.317647 )
font_data = ExtResource( 1 )

[node name="TrackGUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 984.0
margin_bottom = 560.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 41.0

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 289.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Current lap -"
align = 1
valign = 1

[node name="TimeValue" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 297.0
margin_right = 489.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "12:23.245"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 497.0
margin_right = 562.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 570.0
margin_right = 784.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Best Lap -"

[node name="BestTimeValue" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 792.0
margin_right = 984.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "01:23.256"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongWayLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 49.0
margin_right = 984.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Wrong Way! Turn Around!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
